<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nullpointer.SplitCalc.MainActivity$PlaceholderFragment" >

    <LinearLayout 
     	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:layout_weight="1"
    	android:background="#FF0000" >
        
        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" />
        
	    <Button
	        android:id="@+id/button2"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="2" />
	    
	    <Button
	        android:id="@+id/button4"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="4" />
	    
	     <Button
	         android:id="@+id/button6"
	         style="?android:attr/buttonStyleSmall"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="1"
	         android:text="6" />
	     
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#00FF00" >
	     
	   <Button
	       android:id="@+id/button8"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="8" />

	   <Button
	       android:id="@+id/buttonPlus"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="+" />

	   <Button
	       android:id="@+id/buttonMult"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="x" />

	   <Button
	       android:id="@+id/buttonDec"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="(" />

    </LinearLayout>
    
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#FFA500" >
	     
	   <Button
	       android:id="@+id/buttonPow"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="pow"
	       android:textSize="7dp" />

	   <Button
	       android:id="@+id/buttonM1"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="m1"
	       android:textSize="7dp" />

	   <Button
	       android:id="@+id/buttonM3"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="m3"
	       android:textSize="7dp" />

	   <Button
	       android:id="@+id/buttonDec"
	       style="?android:attr/buttonStyleSmall"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="." />

    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#F0F00F" >

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/result_textView" />

        <TextView
            android:id="@+id/theResultTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resultTextView"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:background="@android:color/background_dark"
            android:gravity="center"
            android:hint="Result Displayed Here!"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#7EC0EE" />

        <TextView
            android:id="@+id/inputTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_below="@+id/theResultTextView"
            android:layout_centerInParent="true"
            android:text="@string/input_textView"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/theInputTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_below="@+id/inputTextView"
            android:layout_centerInParent="true"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="Input Displayed Here!"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="10dp" />

        <Button
            android:id="@+id/buttonUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/theInputTextView"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/resultTextView"
            android:text="@string/undo_button" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonUndo"
            android:layout_toRightOf="@+id/inputTextView"
            android:text="@string/clear_button" />

        <Button
            android:id="@+id/evalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonUndo"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/Evaluate_button" />
        
    </RelativeLayout>
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="#00FFd2" >
	
	    <Button
	        android:id="@+id/buttonSqrt"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="sqrt"
	        android:textSize="6dp" />

	    <Button
	        android:id="@+id/buttonM2"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="m2"
	        android:textSize="7dp" />

	    <Button
	        android:id="@+id/buttonM4"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="m4"
	        android:textSize="7dp" />

	    <Button
	        android:id="@+id/buttonM5"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="m5"
	        android:textSize="7dp" />

    </LinearLayout>
    
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="#FF00FF" >
	
	    <Button
	        android:id="@+id/button9"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="9" />

	    <Button
	        android:id="@+id/buttonSub"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="-" />

	    <Button
	        android:id="@+id/buttonDiv"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text="/" />

	    <Button
	        android:id="@+id/buttonRightPar"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_weight="1"
	        android:text=")" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#0000F0" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="1" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="3" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="5" />

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="7" />
    </LinearLayout>

</LinearLayout>